Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -954,7 +954,8 @@
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    number = number or len(trips)\n",
     "    other_trips = list(filter(lambda trip: trip != selected_trip, trips))\n",
-    "    neighbors = distance_all(selected_trip)\n",
+    "    neighbors = distance_all(selected_trip, other_trips)\n",
+    "    \n",
     "    return nearest"
    ]
   },
