Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -955,7 +955,7 @@
     "    number = number or len(trips)\n",
     "    other_trips = list(filter(lambda trip: trip != selected_trip, trips))\n",
     "    neighbors = distance_all(selected_trip, other_trips)\n",
-    "    nearest = sorted(neighbors, key = lambda n: n['distnace_from_selected'])\n",
+    "    #nearest = sorted(neighbors, key = lambda n: n['distnace_from_selected'])\n",
     "    return nearest"
    ]
   },
